<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_SecondIntro_3"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/gradient">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/icon"
        android:background="@drawable/bmi_round"
        android:padding="30dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_3"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorSecondary"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Just click the done button below to start."
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/whiteColor"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/secIntro_PageThreeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="bottom|start"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_gravity="bottom|end"
            android:text="@string/back"/>

        <TextView
            android:id="@+id/secIntro_PageThreeDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="bottom|end"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_gravity="bottom|end"
            android:text="@string/done"/>


    </LinearLayout>

</LinearLayout>